<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/bgColorMain"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:id="@+id/result">

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/colorOnPrimary"
        android:layout_marginStart="@dimen/margin_calc_line"
        android:layout_marginEnd="@dimen/margin_calc_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/buttons"
        android:layout_weight="5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/AC"
                android:background="@android:color/transparent"
                android:id="@+id/ac"
                android:textColor="?attr/colorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:background="@android:color/transparent"
                android:id="@+id/seven"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:background="@android:color/transparent"
                android:id="@+id/four"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:background="@android:color/transparent"
                android:id="@+id/one"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:icon="@drawable/ic_donate"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorSecondary"
                android:background="@android:color/transparent"
                android:id="@+id/donate"
                android:textColor="?attr/colorPrimary"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:icon="@drawable/ic_west_24"
                app:iconGravity="textStart"
                app:iconTint="?attr/colorSecondary"
                android:background="@android:color/transparent"
                android:id="@+id/del"
                android:textColor="?attr/colorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:background="@android:color/transparent"
                android:id="@+id/eight"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:background="@android:color/transparent"
                android:id="@+id/five"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:background="@android:color/transparent"
                android:id="@+id/two"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:background="@android:color/transparent"
                android:id="@+id/zero"
                android:textColor="?attr/colorPrimary"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="%"
                android:background="@android:color/transparent"
                android:id="@+id/percent"
                android:textColor="?attr/colorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:background="@android:color/transparent"
                android:id="@+id/nine"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:background="@android:color/transparent"
                android:id="@+id/six"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:background="@android:color/transparent"
                android:id="@+id/three"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:background="@android:color/transparent"
                android:id="@+id/dot"
                android:textColor="?attr/colorPrimary"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="/"
                android:background="@android:color/transparent"
                android:id="@+id/frag"
                android:textColor="?attr/colorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="*"
                android:background="@android:color/transparent"
                android:id="@+id/multi"
                android:textColor="?attr/colorPrimary"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="-"
                android:background="@android:color/transparent"
                android:id="@+id/minus"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="+"
                android:background="@android:color/transparent"
                android:id="@+id/plus"
                android:textColor="?attr/colorPrimary"/>



            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/equal"
                android:backgroundTint="@android:color/transparent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        app:cardBackgroundColor="?attr/colorSecondary"
                        app:cardCornerRadius="50dp">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="="
                                android:layout_centerInParent="true"
                                android:textColor="?attr/colorPrimary"/>
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>
                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>









    </LinearLayout>


</LinearLayout>